--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </section>
             <section class="box box4">
                 <h3>TamilNadu</h3>
-                <p>Andhra Pradesh is located in the south eastern coast of India and is the eighth largest state in the country. The state is bordered by Chhattisgarh to the north, Odisha to the northeast, Telangana and Karnataka to the west, Tamil Nadu
+                <p>Tamil Nadu is located in the south eastern coast of India and is the eighth largest state in the country. The state is bordered by Chhattisgarh to the north, Odisha to the northeast, Telangana and Karnataka to the west, Tamil Nadu
                     to the south, and the Bay of Bengal to the east.</p>
             </section>
             <section class="box box5">
